--- a/src/app/registro/registro.component.html
+++ b/src/app/registro/registro.component.html
@@ -1,6 +1,6 @@
 <div class="w-100 vw-100" align="center">
   <h3>Crear nueva cuenta</h3>
-  <form>
+  <form [formGroup]="form" (ngSubmit)="registrar()" class="example-form">
 
     <div class="row g-3">
       <div class="col">
@@ -83,13 +83,15 @@
       </div>
     </div>
     <div class="form-group row">
-      <input class="form-check-input" type="checkbox" value="" id="invalidCheck2" required>
-      <label class="form-check-label" for="invalidCheck2">
+      <input class="form-check-input" type="checkbox" value="" id="inputCondiciones" required>
+      <label class="form-check-label" for="inputCondiciones">
         Acepto las <a href="https://www.mozilla.com/">condiciones de uso</a> y las <a href="https://www.mozilla.com/">pol&iacute;ticas
         de privacidad</a>
       </label>
     </div>
-    <button class="btn btn-primary" type="submit">Reg&iacute;strarse</button>
+    <button class="btn btn-primary"
+            [disabled]="!form.valid"
+            type="submit">Reg&iacute;strarse</button>
   </form>
 
 </div>
