--- a/src/app/usuarios/usuarios.component.html
+++ b/src/app/usuarios/usuarios.component.html
@@ -1,1 +1,106 @@
-<p>usuarios works!</p>
+<div class="w-100 vw-100" align="center">
+  <h3>Crear nueva cuenta</h3>
+  <form [formGroup]="form" (ngSubmit)="registrar(this.form.value)" class="example-form">
+
+    <!--    <div class="row g-3">-->
+    <!--      <div class="col">-->
+    <!--        <input type="text" class="form-control" placeholder="First name" aria-label="First name">-->
+    <!--      </div>-->
+    <!--      <div class="col">-->
+    <!--        <input type="text" class="form-control" placeholder="Last name" aria-label="Last name">-->
+    <!--      </div>-->
+    <!--    </div>-->
+
+    <div class="form-group row">
+      <label for="inputNombres" class="col-sm-2 col-form-label">Nombres:</label>
+      <div class="col-md-4 mb-3">
+        <input formControlName="inputNombres" required
+               type="text" class="form-control"
+               id="inputNombres">
+      </div>
+    </div>
+    <div class="form-group row">
+      <label for="inputTelefono" class="col-sm-2 col-form-label">Teléfono:</label>
+      <div class="col-md-4 mb-3">
+        <input type="number" formControlName="inputTelefono"
+               class="form-control" id="inputTelefono">
+      </div>
+    </div>
+    <div class="form-group row">
+      <label for="inputApellidos" class="col-sm-2 col-form-label">Apellidos:</label>
+      <div class="col-md-4 mb-3">
+        <input type="text" formControlName="inputApellidos" class="form-control" id="inputApellidos" required>
+      </div>
+    </div>
+    <div class="form-group row">
+      <label for="inputCorreo" class="col-sm-2 col-form-label">Correo:</label>
+      <div class="col-md-4 mb-3">
+        <input type="email" formControlName="inputCorreo"
+               class="form-control" id="inputCorreo" required>
+      </div>
+    </div>
+    <div class="form-group row">
+      <label for="inputUsuario" class="col-sm-2 col-form-label">Usuario</label>
+      <div class="col-md-4 mb-3">
+        <input type="text" formControlName="inputUsuario" class="form-control" id="inputUsuario" required>
+      </div>
+    </div>
+        <div class="form-group row">
+          <label for="inputDireccion" class="col-sm-2 col-form-label">Direcci&oacute;n:</label>
+          <div class="col-md-4 mb-3">
+            <input type="text" formControlName="inputDireccion" class="form-control" id="inputDireccion">
+          </div>
+        </div>
+        <div class="form-group row">
+          <label for="inputContrasena" class="col-sm-2 col-form-label">Contrase&ntilde;a:</label>
+          <div class="col-md-4 mb-3">
+            <input type="text" formControlName="inputContrasena" class="form-control"
+                   id="inputContrasena" required>
+          </div>
+        </div>
+        <div class="form-group row">
+          <label for="inputBarrio" class="col-sm-2 col-form-label">Barrio:</label>
+          <div class="col-md-4 mb-3">
+            <input type="text" formControlName="inputBarrio" class="form-control" id="inputBarrio">
+          </div>
+        </div>
+        <div class="form-group row">
+          <label for="inputFechaNacimiento" class="col-sm-2 col-form-label">Fecha de nacimiento:</label>
+          <div class="col-md-4 mb-3">
+            <input type="date" formControlName="inputFechaNacimiento" class="form-control" id="inputFechaNacimiento"
+                   required>
+          </div>
+        </div>
+    <!--    <div class="form-group row">-->
+    <!--      <legend class="col-form-label col-sm-2 pt-0">G&eacute;nero:</legend>-->
+    <!--      <div class="col-sm-10">-->
+    <!--        <div class="form-check">-->
+    <!--          <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="M" checked>-->
+    <!--          <label class="form-check-label" for="gridRadios1">-->
+    <!--            Masculino-->
+    <!--          </label>-->
+    <!--        </div>-->
+    <!--        <div class="form-check">-->
+    <!--          <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="F">-->
+    <!--          <label class="form-check-label" for="gridRadios2">-->
+    <!--            Femenino-->
+    <!--          </label>-->
+    <!--        </div>-->
+    <!--      </div>-->
+    <!--    </div>-->
+    <!--    <div class="form-group row">-->
+    <!--      <input class="form-check-input" formControlName="inputCondiciones" type="checkbox" value="" id="inputCondiciones"-->
+    <!--             required>-->
+    <!--      <label class="form-check-label" for="inputCondiciones">-->
+    <!--        Acepto las <a href="https://www.mozilla.com/">condiciones de uso</a> y las <a href="https://www.mozilla.com/">pol&iacute;ticas-->
+    <!--        de privacidad</a>-->
+    <!--      </label>-->
+    <!--    </div>-->
+    {{form.valid}}
+    <button class="btn btn-primary"
+            [disabled]="!form.valid"
+            type="submit">Registrarse
+    </button>
+  </form>
+
+</div>
